[package]
name = "eidolon"
version = "1.4.1"
authors = ["nicohman <nicohman@demenses.net>"]
description="Provides a single TUI-based registry for drm-free, wine and steam games on linux, accessed through a rofi launch menu."
readme="README.md"
keywords=["gaming", "steam", "games"]
categories=["gui", "games", "command-line-interface"]
license="GPL-3.0"
[dependencies]
regex = "0.2"
serde = "1.0.70"
serde_derive = "1.0"
serde_json = "1.0"
structopt = "0.2.10"
